<resources>
    <string name="app_name">JUISMI</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_button">LOG IN</string>
    <string name="register_button">SIGN UP</string>
    <string name="about">An easy, free, and visual app for organizing everything with everyone.</string>
    <string name="have_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="do_have">Already have an account?</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm Password</string>
    <string name="title_activity_issues_view">IssuesView</string>
    <string name="logout">LOG OUT</string>
    <string name="facebook_app_id">2024429984447612</string>
    <string name="fb_login_protocol_scheme">fb2024429984447612</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
