<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.juismi.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/about"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/about"
        android:text="@string/about"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="@string/about" />

    <Button
        android:id="@+id/login"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:elevation="1000dp"
        android:text="@string/login_button"
        tools:text="@string/login_button" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_toStartOf="@+id/register"
        android:text="@string/have_account" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/question"
        android:layout_alignBottom="@+id/question"
        android:layout_alignEnd="@+id/about"
        android:layout_marginEnd="37dp"
        android:text="@string/register_button"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold" />

</RelativeLayout>

